# movieflixupdate1.1

./: .flutter-plugins-dependencies  .gitignore  README.md  cleanup_flutter_space.sh  codemagic.yaml  pubspec.yaml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  start-emulator.sh
android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/example/movieflix/: MainActivity.kt
android/app/src/main/res/xml/: provider_paths.xml
assets/: service_account.json  settings
facebook_audience_network-1.0.1/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
lib/: account_screen.dart  categories_screen.dart  downloads_screen.dart  firebase_options.dart  home_screen_lite.dart  home_screen_main.dart  interactive_features_screen.dart  main.dart  main_tab_screen.dart  main_videoplayer.dart  movie_detail_screen.dart  mylist_screen.dart  profile_screen.dart  profile_selection_screen.dart  recommended_movies_screen.dart  reel_player_screen.dart  search_screen.dart  session_manager.dart  settings_provider.dart  settings_screen.dart  signin_screen.dart  signup_screen.dart  splash_screen.dart  story_player_screen.dart  streaming_service.dart  sub_home_screen.dart  sub_video_player.dart  tmdb_api.dart  trailer_player_screen.dart  tv_homescreen.dart  tv_show_episodes_section.dart  user_manager.dart  users.dart  (+2 more)
(+188 files in other folders)
